# scorecard

./: CMakeLists.txt  baseball-scorecard-design.md
src/: game_view.c  game_view.h  main.c  routes.c  routes.h  storage.c  storage.h
tests/: test_game_view.c  test_storage.c
web/: index.html  style.css
web/js/: annotationCodes.js  api.js  app.js  atbatEditor.js  diamond.js  games.js  gameview.js  grid.js  lineup.js  overlay.js  players.js  router.js  stats.js  teams.js
